--- a/resume.css
+++ b/resume.css
@@ -331,11 +331,13 @@ color: white;
 	margin: 0px;
 	padding: 0px;
 	display: none;
+	background-color:lightgrey;
+	margin-right:1rem;
 }
 .dropdown ul li a{
 	text-decoration: none;
 	color: white;
-	font-size: 2.5rem;
+	font-size: 2rem;
 	display: inline-block;
 	margin-top: .3rem;
 
