--- a/resume.css
+++ b/resume.css
@@ -163,15 +163,35 @@ section:nth-child(even){
 	flex-wrap: wrap;
 	justify-content: space-around;
 }
-.portfolio-content div{
-	width:13rem ;
+.portfolio-box{
+	width:14.5rem ;
 	/*min-width: 7rem;*/
 	height: 13rem;
 	margin: 1rem;
+	background-image: url(https://ninjasfiles.s3.amazonaws.com/asset_0000000000000025_1550237330_codezen_2.png);
+	background-size: cover;
+	background-position: center;
+
 }
-.portfolio-content div img{
+.portfolio-box-content{
+
+	display: none;
+	background-color: ;
+
+
+}
+.portfolio-box:hover div{
+	display: block;
+		width: 100%;
 	height: 100%;
-	width: 100%;
+	background-color: lightgrey;
+	opacity: .8;
+	padding: 1rem;
+	box-sizing: border-box;
+	font-size: 1.5rem;
+	color: #5a5a5a;
+	font-weight: bold;
+	
 }
 .margin-bottom5{
 	margin-bottom: 5rem;
@@ -218,7 +238,7 @@ section:nth-child(even){
 	justify-content: space-between;
 }
 #contact-content>div{
-	width: 25rem;
+	width: 25rem ;
 	margin: 3rem;
 	
 }
@@ -332,8 +352,10 @@ color: white;
 	margin: 0px;
 	padding: 0px;
 	display: none;
-	background-color:#828470;
+	background-color:#4b4158;
 	margin-right:1rem;
+	border-radius: 1rem;
+
 }
 .dropdown ul li a{
 	text-decoration: none;
@@ -341,8 +363,8 @@ color: white;
 	font-size: 2rem;
 	display: inline-block;
 	margin-top: .3rem;
-	padding: .5rem;
-
+	padding: .5rem 1rem 0rem 1rem;
+    
 }
 #hamburger-icon{
 
@@ -409,10 +431,36 @@ display: none;
 .dropdown-list:hover{
 	display: initial;
 }
-#hamburger-icon{
+#about p{
+	width: 95%;
+}
+.skills-display{
+	width: 95%;
+}
+.portfolio-content{
+	width: 95%;
+}
+#contact-content{
+	width: 95%;
+}
 
 }
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
